Phase 10: single-source keybinding hints, scrollable help popup, packaging
Adds ui/Bindings as the one canonical table of every keybinding hint,
covering popup states that the old ad-hoc TuiApp.keyHints() switch never
accounted for; the bottom hint bar and the ? help popup both render from it
instead of drifting independently. Removes the generic hint lines the input
popups had accreted in their own view() bodies now that the hint bar always
reflects the open popup's context.

The generated help body (~60 lines) doesn't fit most terminals, so it scrolls:
gave HelpPopup a real ScrollbarState (same toolkit widget-state pattern as
TextInputState on the other popups) and windowed its body through
Responsive, matching Lists.selectable's existing cursor-following window.
Found and fixed after a human tried the popup and reported it wasn't
scrollable.

Also: README.md, dotfile.cmd launcher, and a convention/200ms-rule audit
ahead of the fat jar acceptance run.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>